Edit CSS to correct site spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ body {
 }
 header {
     width: 100%;
-    height: 116px;
+    height: 117px;
     position: fixed;
     top: 0px;
     display: flex;
@@ -121,30 +121,34 @@ nav {
 h1{
     font-family: "playfair", serif;
     font-weight: normal;
-    font-size: 40px;
+    font-size: 36px;
     color: white;
     font-weight: normal;
     line-height: .95;
     text-shadow: 2px 2px 4px gray;
     text-align: center;
     padding: 20px 20px 100px 20px;
+    margin: 0 auto;
+    width: 90%;
 }
 h2{
     font-family: "playfair", serif;
     font-weight: normal;
     font-style: italic;
     color: #2d2d2d;
-    font-size: 30px;
+    font-size: 32px;
     text-align: center;
     padding: 10px 0;
 }
 .subscribe h2 {
     color: white;
     text-shadow: 2px 2px 4px gray;
+    margin: 32px 0 11px 0;
 }
 h3{
     font-family: "raleway", sans-serif;
     font-weight: "500";
+    font-size: 17px;
     color: white;
     text-transform: uppercase;
     text-align: center;
@@ -162,6 +166,7 @@ p {
 }
 .subscribe p{
     color: white;
+    font-size: 16px;
 }
 ul {
     list-style: none;
@@ -187,7 +192,7 @@ li {
     color: #e2574c;
     text-transform: uppercase;
     margin: 0 auto;
-    padding: 16px 35px;
+    padding: 14px 35px;
     border-top: 1px solid #d7d7d7;
 }
 .page {
@@ -200,16 +205,21 @@ li {
 .feature {
     height: 405px;
     background:  linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,.25)), 
-    url(../images/banner-girl.png) no-repeat center 60px,
+    url(../images/banner-girl.png) no-repeat center 62px,
     url(../images/flower-bkgd.jpg);
     background-size: cover, 150px 369px, cover;
 }
 .blurb{
-    margin: 30px;
+    margin: 45px 10px;
+    height: 177px;
+}
+.blurb p {
+    font-size: 16px;
+    padding: 16px 0;
 }
 .grid {
     display: grid;
-    height: 200vw;
+    height: 192vw;
     width: 100%;
     grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr;
     grid-gap: 7px;
@@ -287,16 +297,19 @@ li {
     font-weight: 500;
 }
 .subscribe {
-    background: url(../images/wave-bkgd.jpg);
-    background-size: cover;
-    height: 250px;
+    background: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.1)), url(../images/wave-bkgd.jpg);
+    background-size: 360%;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    height: 331px;
     color: white;
-    padding: 30px;
+    padding: 15px;
 }
 .subscriber-email {
     margin: 0 auto;
     position: relative;
     max-width: 450px;
+    padding: 28px 10px;
 }
 .subscriber-email input {
     font-family: "raleway";
@@ -304,7 +317,7 @@ li {
     display: block;
     border: none;
     border-radius: 22px;
-    padding: 14px 20px;
+    padding: 13px 20px;
     margin: 0 auto;
     width: 100%;
 }
@@ -315,13 +328,11 @@ li {
     border-radius: 20px;
     background-color: #e2574c;
     color: white;
-    padding: 11px 22px;
+    padding: 10px 23px;
     margin: 2px;
-    /* display: inline; */
     position: absolute;
-    right: 1px;
-    top: 1px;
-    /* left: 1px; */
+    right: 11px;
+    top: 29px;
 }
 footer {
     background-color: #242424;
@@ -340,7 +351,7 @@ footer div.container {
     font-weight: normal;
     line-height: 1.5;
     color: white;
-    margin-top: 30px;
+    margin-top: 29px;
 }
 .contact {
     font-family: "playfair";
@@ -357,7 +368,7 @@ footer div.container {
 }
 .fab {
     display: inline-block;
-    width: 20px;
+    width: 25px;
 }
 .social-words {
     display: none;
